--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
 	box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
 }
 
-#about {
+#about{
 	height: auto;
 	text-align: center;
 	margin-left: 20%;
@@ -106,6 +106,47 @@ body {
 	justify-content: center;
 	margin-top: 20%;
 	margin-bottom: 30px;
+    text-align: center;
+    height: auto;
+	margin-left: 20%;
+	margin-right: 20%;
+	font-size: 20px;
+}
+
+.skill #manage {
+	width:70%;
+}
+
+.skill #python {
+	width:80%;
+}
+
+.skill #html {
+	width:60%;
+}
+
+.skill #css {
+	width:60%;
+}
+
+.skill #node {
+	width:30%;
+}
+
+.skill #lua {
+	width:35%; 
+}
+
+.skill #git {
+	width: 30%;
+}
+
+.skill #figma {
+	width: 50%;
+}
+
+.skill #sql {
+	width: 40%;
 }
 
 .skills h3 {
@@ -144,7 +185,7 @@ body {
 	box-shadow: 0 0 10px white;
 }
 
-#footer {
+footer {
 	width: 80%;
 	margin: 0 auto;
 	height: 50px;
@@ -152,14 +193,17 @@ body {
 	justify-content: flex-start;
 	align-items: center;
 	margin-top: 80px;
-}
-
-#footer #copyright {
 	text-align: left;
 	color: #e5e0e0;
 	font-size: 14px;
 	margin-left: 0;
 }
+
+
+
+/* --------------------------------------------- */
+
+
 
 .projects-header {
 	text-align: center;
@@ -394,40 +438,4 @@ body {
   color: rgb(248, 172, 8);
   text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
   transition-delay: 2s;
-}
-
-.skill #manage {
-	width:70%;
-}
-
-.skill #python {
-	width:80%;
-}
-
-.skill #html {
-	width:60%;
-}
-
-.skill #css {
-	width:60%;
-}
-
-.skill #node {
-	width:30%;
-}
-
-.skill #lua {
-	width:35%; 
-}
-
-.skill #git {
-	width: 30%;
-}
-
-.skill #figma {
-	width: 50%;
-}
-
-.skill #sql {
-	width: 40%;
 }
