--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+/*
+  ================================================
+   Made with heart by Stainowy (© 2025)
+   stainowy.vercel.app
+   github.com/stainowy
+
+  You MAY NOT:
+   - Use this code for commercial purposes.
+   - Remove credit or redistribute without license terms.
+
+   Respect the code. Respect the creator.
+  ================================================
+*/
+
 body {
 	font-family: "Montserrat", sans-serif;
 	background-color: #0b0a0a;
