--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -1,10 +1,30 @@
+/*
+  ================================================
+   Made with heart by Stainowy (© 2025)
+   stainowy.vercel.app
+   github.com/stainowy
+
+  You MAY NOT:
+   - Use this code for commercial purposes.
+   - Remove credit or redistribute without license terms.
+
+   Respect the code. Respect the creator.
+  ================================================
+*/
+
 body {
 	font-family: "Montserrat", sans-serif;
 	background-color: #0b0a0a;
 	color: #e5e0e0;
 	margin: 0;
 	padding: 0 10%;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 
 html {
   scroll-behavior: smooth;
